--- a/avalur_cv.tex
+++ b/avalur_cv.tex
@@ -19,7 +19,7 @@
 
 % для полной версии резюме — detailedtrue, для сокращенной — detailedfalse
 \detailedtrue
-% \detailedfalse
+%\detailedfalse
 
 \ifdetailed
 % в полной версии много букв, поэтому поплотнее
@@ -45,23 +45,23 @@
 \ifdetailed
 &
 \begin{itemize}
-	\item 2019 — руководитель новой образовательной программы бакалавриата \href{https://maad.compscicenter.ru}{<<Науки о данных>>} (до 2021 — <<Математика, алгоритмы и анализ данных>>), созданной в сотрудничестве с Яндексом на факультете математики и компьютерных наук СПбГУ.
+	\item с 2019 — руководитель новой образовательной программы бакалавриата \href{https://maad.compscicenter.ru}{<<Науки о данных>>} (до 2021 — <<Математика, алгоритмы и анализ данных>>), созданной в сотрудничестве с Яндексом на факультете математики и компьютерных наук СПбГУ.
 
-	Программа сочетает фундаментальное математическое образование с изучением современного программирования и машинного обучения. Студентам предлагаются темы научных исследований, связанные с разработками ведущих компаний в области информационных технологий. Она сразу стала популярной среди мотивированных абитуриентов: в 2019 году конкурс был около 25 человек на место, все бюджетные места заполняются победителями и призёрами олимпиад по математике и информатике, включая заключительный этап Всероссийской олимпиады школьников и международную олимпиаду по математике (IMO).
+	Программа сочетает фундаментальное математическое образование с изучением современного программирования и машинного обучения. Студентам предлагаются темы научных исследований, связанные с разработками ведущих компаний в области информационных технологий. Программа сразу стала популярной среди мотивированных абитуриентов: в 2019 году конкурс был около 25 человек на место, практически все бюджетные места заполняются победителями и призёрами олимпиад по математике и информатике, включая заключительный этап Всероссийской олимпиады школьников и международную олимпиаду по математике (IMO).
 
 	\item 2019-2020 — создал с нуля на грант министерства образования РФ \href{https://gsom.spbu.ru/all_news/event2021-02-04/}{Международный научно-методический центр СПбГУ}
 
 	В 2019-2020 годах руководил командой факультета математики и компьютерных наук в совместном с институтом «Высшая школа менеджмента» СПбГУ проекте Международного научно-методического центра СПбГУ (МНМЦ).
 
-	Концепция МНМЦ заключается в создании и реализации передовых программ повышения квалификации и переподготовки преподавателей, учебно-методических материалов, активному включению лучших российских и зарубежных экспертов на всех этапах работы и, как следствие, формированию, поддержке и развитию профессионального сообщества преподавателей университетов.
+	Концепция МНМЦ заключалась в создании учебно-методических материалов и реализации передовых программ повышения квалификации и переподготовки преподавателей, активном включении лучших российских и зарубежных экспертов на всех этапах работы и, как следствие, формированию, поддержке и развитию профессионального сообщества преподавателей университетов.
 
 	Всего к реализации проекта было привлечено 123 человека, среди которых 61 кандидат наук или PhD (50\%) и 24 доктора наук (20\%). Команда проекта не только успешно справилась с возникшими в условиях пандемии COVID-19 вызовами, быстро перестроившись и выполнив запланированное, но и обернула их на пользу проекту, осуществив интенсивное обучение научно-педагогических работников и аспирантов российских образовательных организаций со всей страны.
 
 	За 2020 год в рамках МНМЦ было проведено две программы повышения квалификации, две программы стажировки, одна программа профессиональной переподготовки и одна школа по математике и компьютерным наукам для преподавателей университетов Российской Федерации. Всего на мероприятиях МНМЦ прошли обучение более 1500 человек из более чем 50 городов и 60 вузов России. Мероприятия получили теплый отклик сообщества, а выпускники центра с удовольствием используют полученные знания и методические материалы в своей работе.
 
-    \item 2020-2021 — соруководитель и преподаватель традиционной \href{https://sochisirius.ru/obuchenie/nauka/smena747/3603}{<<Январской научной школы по математике и программированию>>}
+    \item 2020-2021 — соруководитель и преподаватель традиционной \href{https://sochisirius.ru/obuchenie/nauka/smena747/3603}{<<Январской научной школы по математике и программированию>> в Сириусе}
 
-	\item 2021 — все бюджетные места программы <<Науки о данных>> заполняются олимпиадниками-всеросами, включая двух победителей международной олимпиады по математике 
+	\item 2021 — все бюджетные места программы <<Науки о данных>> заполняются олимпиадниками-всеросами, включая двух победителей международной олимпиады по математике
 \end{itemize}
 \\
 \else
@@ -75,23 +75,27 @@
 \begin{itemize}
 	\item 2013 — запустил филиал \href{https://yandexdataschool.ru}{ШАД} в Новосибирске. C 2016 по 2018 гг. в сумме 16 выпускников
 	\item 2017 — в сотрудничестве с компанией JetBrains расширил филиал ШАДа до \href{https://compscicenter.ru}{Computer science center}
-	\item 2019 — руководитель и преподаватель на \href{https://sochisirius.ru/obuchenie/graduates/smena240/1174}{<<Интенсивном проектном практикуме для разработчиков от Сириуса, Яндекса и ФКН ВШЭ>>} 
+	\item 2019 — руководитель и преподаватель на \href{https://sochisirius.ru/obuchenie/graduates/smena240/1174}{<<Интенсивном проектном практикуме для разработчиков от Сириуса, Яндекса и ФКН ВШЭ>>}
 \end{itemize} \\
 \else
 & {В 2013 запустил филиал ШАД в Новосибирске (с 2016 по 2018 гг. в сумме 16 выпускников). В 2017 в сотрудничестве с компанией Jetbrains расширил филиал ШАДа до \href{https://compscicenter.ru}{Computer science center}. В 2019 провел \href{https://sochisirius.ru/obuchenie/graduates/smena240/1174}{<<Интенсивный проектный практикум для разработчиков от Сириуса, Яндекса и ФКН ВШЭ>>}} \\
 \\
 \fi
+
+\ifdetailed
 \end{longtable}
 \newpage
 \begin{longtable} {l | p{0.85\textwidth}}
 \\
+\fi
+
 2015 — 2018 & {\textbf{\href{https://yandex.ru/}{Яндекс}, аналитик}} \\
 \ifdetailed
 &
 \begin{itemize}
 	\item реализовал ежедневный расчет поатрибутной (публикуемость, название, адрес, время работы...) метрики точности базы организаций Яндекса
 	\item автоматизировал и оптимизировал процессы актуализации данных в колл-центрах и в \href{https://toloka.yandex.ru}{Яндекс.Толоке}. В частности, на 20\% улучшил эффективность актуализации, применив catboost для предсказания вероятности закрытия организации
-	\item дважды повысил точность организаций Справочника на 2\% и 3\%, выделив из потерь наиболее крупные проблемы и исправив их: процесс обхода компаний с недоступными телефонами; повышение точности времени работы организаций их приоритетной актуализацией операторами колл-центров
+	\item дважды повысил точность организаций Справочника на 2\% и 3\%, выделив из потерь наиболее крупные проблемы и исправив их: аналитическая поддержка процесса обхода компаний с недоступными телефонами; повышение точности времени работы организаций их приоритетной актуализацией операторами колл-центров
 \end{itemize}
 \\
 \else
@@ -132,10 +136,10 @@
 	\item linux, git, ipython notebook
 	\item SQL, MapReduce, MPI, OpenMP
 \end{itemize}
-& 
+&
 \vspace{-2.2em}
 \begin{itemize}
-	\item machine learning (catboost, SVM)
+	\item machine learning (catboost, neural nets)
 	\item алгоритмы, структуры данных
 	\item математика (анализ, численные методы)
 	\item русский: родной, английский: intermediate, французский: débutant
@@ -147,7 +151,7 @@
 \vspace{-0.5em}
 
 \noindent {\textbf{Образование \vspace{-0.5em}}}
-\begin{longtable} {cp{0.35\textwidth}p{0.38\textwidth}l} 
+\begin{longtable} {cp{0.35\textwidth}p{0.38\textwidth}l}
 2013 — 2016	& \href{https://yandexdataschool.ru}{Школа анализа данных, Яндекс} & программирование, машинное обучение & выпускник \vspace{0.5em}\\
 2009 — 2014	& \href{http://www.ict.nsc.ru/ru/education/postgraduate}{аспирантура ИВТ СО РАН} & мат. моделирование, численные методы & к.ф.-м.н \vspace{0.5em}\\
 2003 — 2009	& \href{https://www.nsu.ru/n/mathematics-mechanics-department/}{НГУ, механико-математический факультет} & математика & магистр \vspace{0.5em}\\
@@ -155,7 +159,7 @@
 
 \ifdetailed
 \noindent {\textbf{Онлайн-курсы \vspace{-0.5em}}}
-\begin{longtable} {cp{0.35\textwidth}p{0.38\textwidth}l} 
+\begin{longtable} {cp{0.35\textwidth}p{0.38\textwidth}l}
 2017 & Coursera, University of Washington & Programming Languages, parts A, B, C & 	сертификат \vspace{0.5em}\\
 2019 & Coursera, HSE University & How to Win a Data Science Competition: Learn from Top Kagglers & сертификат \vspace{0.5em}\\
 \end{longtable}
