--- a/avalur_cv_en.tex
+++ b/avalur_cv_en.tex
@@ -19,7 +19,7 @@
 
 % для полной версии резюме — detailedtrue, для сокращенной — detailedfalse
 \detailedtrue
-% \detailedfalse
+%\detailedfalse
 
 \begin{document}
 
@@ -43,26 +43,26 @@
 \begin{itemize}
 	\item 2019 — head of the new educational program for bachelor's degree \href{https://maad.compscicenter.ru}{<<Data Science>>} (before 2021 <<Mathematics, algorithms and data analysis>>), created in cooperation with Yandex at the Mathematics and Computer Science department of St. Petersburg State University.
 
-    The program combines fundamental mathematics education with the study of modern programming and machine learning. Students are offered research topics related to the developments of leading companies in the field of information technology. It immediately became popular among motivated applicants: in 2019, the competition was about 25 people per position, all budget positions were filled with winners of Olympiads in mathematics and computer science, including the final stage of the All-Russian Olympiad for schoolchildren and the International Olympiad in Mathematics (IMO).
+    The program combines fundamental mathematics education with the study of modern programming and machine learning. Students are offered research topics related to the developments of leading companies in the field of information technology. It immediately became popular among motivated applicants: in 2019, the competition was about 25 persons per position, almost all budget positions were filled with winners of Olympiads in mathematics and computer science, including the final stage of the All-Russian Olympiad for schoolchildren and the International Olympiad in Mathematics (IMO).
 
     \item 2019-2020 — created from scratch with a grant from the Ministry of Education of the Russian Federation \href{https://gsom.spbu.ru/all_news/event2021-02-04/}{International Scientific and Methodological Center of St. Petersburg State University}
 
     In 2019-2020, I led the team of the Mathematics and Computer Science Department in a joint project with the Graduate School of Management of St. Petersburg State University project of the International Scientific and Methodological Center of St. Petersburg State University (ISMC).
 
-    The ISMC concept was to create and implement advanced training and retraining programs for teachers, teaching materials, active involvement of the best Russian and foreign experts at all stages of work and, as a result, the formation, support and development of a professional community of university teachers.
+    The ISMC concept was to create teaching materials and implement advanced training and retraining programs for teachers, with active involvement of the best Russian and foreign experts at all stages of work and, as a result, the formation, support and development of a professional community of university teachers.
 
-    In total, 123 people were involved in the implementation of the project, including 61 candidates of sciences or PhD (50\%) and 24 doctors of sciences (20\%). The project team not only successfully coped with the challenges that arose in the context of the COVID-19 pandemic, quickly restructuring and fulfilling the planned, but also turned them to the benefit of the project, carrying out intensive training of scientific and pedagogical workers and graduate students of Russian educational organizations from all over the country.
+    In total, 123 persons were involved in the implementation of the project, including 61 candidates of sciences or PhD (50\%) and 24 doctors of sciences (20\%). The project team not only successfully coped with the challenges that arose in the context of the COVID-19 pandemic, quickly restructuring and fulfilling the planned, but also turned them to the benefit of the project, carrying out intensive training of scientific and pedagogical workers and graduate students of Russian educational organizations from all over the country.
 
-    In 2020, within the framework of the ISMC, two advanced training programs, two internship programs, one professional retraining program and one school in mathematics and computer science were conducted for teachers of universities in the Russian Federation. In total, more than 1,500 people from more than 50 cities and 60 universities in Russia were trained at the events of the ISMC. The events received a warm response from the community, and the graduates of the center are happy to use the acquired knowledge and methodological materials in their work.
+    In 2020, within the framework of the ISMC, two advanced training programs, two internship programs, one professional retraining program and one school in mathematics and computer science were conducted for teachers of universities in the Russian Federation. In total, more than 1,500 persons from more than 50 cities and 60 universities in Russia were trained at the events of the ISMC. The events received a warm response from the community, and the graduates of the center are happy to use the acquired knowledge and methodological materials in their work.
 
-    \item 2020-2021 — co-director and teacher of the traditional \href{https://sochisirius.ru/obuchenie/nauka/smena747/3603}{<<January Scientific School of Mathematics and Programming>>}
+    \item 2020-2021 — co-director and teacher of the traditional \href{https://sochisirius.ru/obuchenie/nauka/smena747/3603}{<<January Scientific School of Mathematics and Programming>> in Sirius}
 
     \item 2021 — all budget positions of the Data Science program are filled with winners of All-Russian Olympiads, including two winners of the International Olympiad in Mathematics
 
 \end{itemize}
 \\
 \else
-& {In 2019, I launched an educational bachelor's program \href{https://maad.compscicenter.ru}{<<Data Science>>}, which immediately became popular among the best applicants in Russia. In 2020, I created from scratch with a grant from the Ministry of Education of the Russian Federation \href{https://gsom.spbu.ru/all_news/event2021-02-04/}{International Scientific and Methodological Center of St. Petersburg State University}. I read \href{https://github.com/spbu-math-cs/ml-course-2021/}{1 year machine learning course} and teach traditional \href{https://sochisirius.ru/obuchenie/nauka/ smena747 / 3603}{training sessions in Sirius}.}\\
+& {In 2019, I launched an educational bachelor's program \href{https://maad.compscicenter.ru}{<<Data Science>>}, which immediately became popular among the best applicants in Russia. In 2020, I created from scratch with a grant from the Ministry of Education of the Russian Federation \href{https://gsom.spbu.ru/all_news/event2021-02-04/}{International Scientific and Methodological Center of St. Petersburg State University}. I read \href{https://github.com/spbu-math-cs/ml-course-2021/}{one year machine learning course} and teach traditional \href{https://sochisirius.ru/obuchenie/nauka/smena747/3603}{training sessions in Sirius}.}\\
 \\
 \fi
 \\
@@ -87,7 +87,7 @@
 \end{itemize}
 \\
 \else
-& {Two times increased the accuracy of the organizations database by 2\% and 3\%. Automated and optimized data update processes in call centers and in \href{https://toloka.yandex.ru}{Yandex.Toloka}. Worked in a group of six people, development in Java, SQL, Python, a little bit of C++; catboost.} \\
+& {Two times increased the accuracy of the organizations database by 2\% and 3\%. Automated and optimized data update processes in call centers and in \href{https://toloka.yandex.ru}{Yandex.Toloka}. Worked in a group of six analysts, development in Java, SQL, Python, a little bit of C++; catboost.} \\
 \\
 \fi
 
@@ -124,10 +124,10 @@
 	\item linux, git, ipython notebook
 	\item SQL, MapReduce, MPI, OpenMP
 \end{itemize}
-& 
+&
 \vspace{-2em}
 \begin{itemize}
-	\item machine learning (catboost, SVM)
+	\item machine learning (catboost, neural nets)
 	\item algorithms, data structures
 	\item math: analysis, numerical methods
 	\item Russian: native, English: intermediate, French: débutant
@@ -138,7 +138,7 @@
 \fi
 
 \noindent {\textbf{Education}
-\begin{longtable} {cp{0.35\textwidth}p{0.38\textwidth}l} 
+\begin{longtable} {cp{0.35\textwidth}p{0.38\textwidth}l}
 2013 — 2016	& \href{https://yandexdataschool.ru}{Yandex Data School} & machine learning, programming & graduate \vspace{0.5em}\\
 2009 — 2014	& \href{http://www.ict.nsc.ru/ru/education/postgraduate}{Graduate School of ICT SB RAS} & math modeling, numerical methods & PhD \vspace{0.5em}\\
 2003 — 2009	& \href{https://www.nsu.ru/n/mathematics-mechanics-department}{NSU, Department of Mechanics and Mathematics} & math & master \vspace{0.5em}\\
@@ -146,7 +146,7 @@
 
 \ifdetailed
 \noindent {\textbf{Online courses}
-\begin{longtable} {cp{0.35\textwidth}p{0.38\textwidth}l} 
+\begin{longtable} {cp{0.35\textwidth}p{0.38\textwidth}l}
 2017 & Coursera, University of Washington & Programming Languages, parts A, B, C & 	certificate \vspace{0.5em}\\
 2019 & Coursera, HSE University & How to Win a Data Science Competition: Learn from Top Kagglers & certificate \vspace{0.5em}\\
 \end{longtable}
