Delete tmp files

--- a/avalur_cv.tex
+++ b/avalur_cv.tex
@@ -18,8 +18,8 @@
 \newif\ifdetailed
 
 % для полной версии резюме — detailedtrue, для сокращенной — detailedfalse
-\detailedtrue
-%\detailedfalse
+%\detailedtrue
+\detailedfalse
 
 \ifdetailed
 % в полной версии много букв, поэтому поплотнее
@@ -41,13 +41,13 @@
 
 \noindent {\textbf{Опыт работы}}
 \begin{longtable} {l | p{0.85\textwidth}}
-2019 — н.в. & {\textbf{\href{https://spbu.ru}{Санкт-Петербургский государственный университет}, Факультет математики и компьютерных наук, доцент}} \\
+2019 — н.в. & {\textbf{\href{https://spbu.ru}{Санкт-Петербургский государственный университет}, Факультет математики и компьютерных наук, доцент и руководитель программы по анализу данных}} \\
 \ifdetailed
 &
 \begin{itemize}
 	\item с 2019 — руководитель новой образовательной программы бакалавриата \href{https://maad.compscicenter.ru}{<<Науки о данных>>} (до 2021 — <<Математика, алгоритмы и анализ данных>>), созданной в сотрудничестве с Яндексом на факультете математики и компьютерных наук СПбГУ.
 
-	Программа сочетает фундаментальное математическое образование с изучением современного программирования и машинного обучения. Студентам предлагаются темы научных исследований, связанные с разработками ведущих компаний в области информационных технологий. Программа сразу стала популярной среди мотивированных абитуриентов: в 2019 году конкурс был около 25 человек на место, практически все бюджетные места заполняются победителями и призёрами олимпиад по математике и информатике, включая заключительный этап Всероссийской олимпиады школьников и международную олимпиаду по математике (IMO).
+	Программа сочетает фундаментальное математическое образование с изучением современного программирования и машинного обучения. Студентам предлагаются темы научных исследований, связанные с разработками ведущих компаний в ИТ. Программа сразу стала популярной среди мотивированных абитуриентов: в 2019 году конкурс был около 25 человек на место. Практически все бюджетные места заполняются победителями и призёрами олимпиад по математике и информатике, включая заключительный этап Всероссийской олимпиады школьников и международную олимпиаду по математике (IMO).
 
 	\item 2019-2020 — создал с нуля на грант министерства образования РФ \href{https://gsom.spbu.ru/all_news/event2021-02-04/}{Международный научно-методический центр СПбГУ}
 
@@ -59,13 +59,15 @@
 
 	За 2020 год в рамках МНМЦ было проведено две программы повышения квалификации, две программы стажировки, одна программа профессиональной переподготовки и одна школа по математике и компьютерным наукам для преподавателей университетов Российской Федерации. Всего на мероприятиях МНМЦ прошли обучение более 1500 человек из более чем 50 городов и 60 вузов России. Мероприятия получили теплый отклик сообщества, а выпускники центра с удовольствием используют полученные знания и методические материалы в своей работе.
 
-    \item 2020-2021 — соруководитель и преподаватель традиционной \href{https://sochisirius.ru/obuchenie/nauka/smena747/3603}{<<Январской научной школы по математике и программированию>> в Сириусе}
+  \item 2020-2022 — соруководитель и преподаватель ежегодных \href{https://sochisirius.ru/obuchenie/nauka/smena1078/5204}{<<Январских научных школ по математике и программированию>>} в Сириусе
 
 	\item 2021 — все бюджетные места программы <<Науки о данных>> заполняются олимпиадниками-всеросами, включая двух победителей международной олимпиады по математике
+
+	\item 2021-2022 — читаю \href{https://github.com/spbu-math-cs/ml-course/}{годовой курс по машинному обучению}
 \end{itemize}
 \\
 \else
-& {В 2019 запустил образовательную программу бакалавриата \href{https://maad.compscicenter.ru}{<<Науки о данных>>}, сразу ставшей популярной среди самых лучших абитуриентов России. В 2020 создал с нуля на грант министерства образования РФ \href{https://gsom.spbu.ru/all_news/event2021-02-04/}{Международный научно-методический центр СПбГУ}. Читаю \href{https://github.com/spbu-math-cs/ml-course-2021/}{годовой курс по машинному обучению} и провожу традиционные \href{https://sochisirius.ru/obuchenie/nauka/smena747/3603}{смены в Сириусе}.} \\
+& {В 2019 запустил образовательную программу бакалавриата \href{https://maad.compscicenter.ru}{<<Науки о данных>>}, сразу ставшей популярной среди самых лучших абитуриентов России. В 2020 создал с нуля на грант министерства образования РФ \href{https://gsom.spbu.ru/all_news/event2021-02-04/}{Международный научно-методический центр СПбГУ}. Читаю \href{https://github.com/spbu-math-cs/ml-course/}{годовой курс по машинному обучению} и провожу традиционные \href{https://sochisirius.ru/obuchenie/nauka/smena1078/5204}{смены в Сириусе}.} \\
 \\
 \fi
 \\
@@ -74,11 +76,11 @@
 &
 \begin{itemize}
 	\item 2013 — запустил филиал \href{https://yandexdataschool.ru}{ШАД} в Новосибирске. C 2016 по 2018 гг. в сумме 16 выпускников
-	\item 2017 — в сотрудничестве с компанией JetBrains расширил филиал ШАДа до \href{https://compscicenter.ru}{Computer science center}
-	\item 2019 — руководитель и преподаватель на \href{https://sochisirius.ru/obuchenie/graduates/smena240/1174}{<<Интенсивном проектном практикуме для разработчиков от Сириуса, Яндекса и ФКН ВШЭ>>}
+	\item 2017 — в сотрудничестве с компанией JetBrains расширил филиал ШАДа до отделения \href{https://compscicenter.ru}{Computer science center}
+	\item 2019 — преподаватель и руководитель на \href{https://sochisirius.ru/obuchenie/graduates/smena240/1174}{<<Интенсивном проектном практикуме для разработчиков от Сириуса, Яндекса и ФКН ВШЭ>>}
 \end{itemize} \\
 \else
-& {В 2013 запустил филиал ШАД в Новосибирске (с 2016 по 2018 гг. в сумме 16 выпускников). В 2017 в сотрудничестве с компанией Jetbrains расширил филиал ШАДа до \href{https://compscicenter.ru}{Computer science center}. В 2019 провел \href{https://sochisirius.ru/obuchenie/graduates/smena240/1174}{<<Интенсивный проектный практикум для разработчиков от Сириуса, Яндекса и ФКН ВШЭ>>}} \\
+& {В 2013 запустил филиал ШАД в Новосибирске. В 2017 в сотрудничестве с компанией Jetbrains расширил филиал ШАДа до отделения \href{https://compscicenter.ru}{Computer science center}. В 2019 провел \href{https://sochisirius.ru/obuchenie/graduates/smena240/1174}{<<Интенсивный проектный практикум для разработчиков от Сириуса, Яндекса и ФКН ВШЭ>>}} \\
 \\
 \fi
 
@@ -89,17 +91,17 @@
 \\
 \fi
 
-2015 — 2018 & {\textbf{\href{https://yandex.ru/}{Яндекс}, аналитик}} \\
+2015 — 2018 & {\textbf{\href{https://yandex.ru/}{Яндекс}, аналитик-разработчик (data scientist)}} \\
 \ifdetailed
 &
 \begin{itemize}
-	\item реализовал ежедневный расчет поатрибутной (публикуемость, название, адрес, время работы...) метрики точности базы организаций Яндекса
+	\item реализовал ежедневный расчет поатрибутной (наличие организации, её название, адрес, время работы...) метрики точности базы организаций Яндекса
 	\item автоматизировал и оптимизировал процессы актуализации данных в колл-центрах и в \href{https://toloka.yandex.ru}{Яндекс.Толоке}. В частности, на 20\% улучшил эффективность актуализации, применив catboost для предсказания вероятности закрытия организации
 	\item дважды повысил точность организаций Справочника на 2\% и 3\%, выделив из потерь наиболее крупные проблемы и исправив их: аналитическая поддержка процесса обхода компаний с недоступными телефонами; повышение точности времени работы организаций их приоритетной актуализацией операторами колл-центров
 \end{itemize}
 \\
 \else
-& {Дважды повысил точность организаций Справочника на 2\% и 3\%. Автоматизировал и оптимизировал процессы актуализации данных в колл-центрах и в Толоке. Работа в группе из 6 человек, разработка на Java, SQL, Python, немного С++; catboost.} \\
+& {Дважды повысил точность организаций Справочника на 2\% и 3\% (главная цель команды). Автоматизировал и оптимизировал процессы актуализации данных в колл-центрах и в Толоке. Работал в группе из 6 человек: машинное обучение, разработка на Java, SQL, Python, немного С++; catboost.} \\
 \\
 \fi
 
@@ -121,7 +123,7 @@
 \ifdetailed
 2008 — 2014 & {\href{http://sesc.nsu.ru}{Специализированный учебно-научный центр НГУ}, преподаватель математики}\\
 2006 — 2017 & {организатор и член Жюри математических олимпиад: Всероссийская, Всесибирская, Турнир городов}\\
-2010 — 2013 & {\href{https://sites.google.com/site/sovenoknsk/}{мат. кружок Совёнок}, организатор и преподаватель}\\
+2010 — 2013 & {\href{https://www.sovenok.academy/}{мат. кружок Совёнок}, организатор и преподаватель}\\
 \fi
 
 \end{longtable}
@@ -167,6 +169,6 @@
 
 \noindent {\textbf{Вне работы}}
 
-Люблю проводить время с женой и дочкой, стараюсь по возможности регулярно заниматься спортом (бег, скалолазание), есть в \href{https://www.instagram.com/ovalur/}{Insragram}
+Люблю проводить время с женой и дочкой, стараюсь по возможности регулярно заниматься спортом (плавание, скалолазание), есть в \href{https://www.instagram.com/ovalur/}{Insragram}
 
 \end{document}             % End of document.
