--- a/avalur_cv_en.tex
+++ b/avalur_cv_en.tex
@@ -23,7 +23,7 @@
 
 \begin{document}
 
-\noindent {\Huge{\textbf{   Aleksandr Avdiushenko   }}}%
+\noindent {\Huge{\textbf{Aleksandr Avdiushenko}}}%
 
 \vspace{0.5em}
 
@@ -32,89 +32,92 @@
 
 \vspace{0.5em}
 \hrule
-\vspace{1.0em}
+\vspace{0.5em}
 
 \noindent {\textbf{Work experience}}
 \begin{longtable} {l | p{0.85\textwidth}}
 
-2019 — present & {\textbf{\href{https://spbu.ru}{Saint Petersburg State University}, Department of Mathematics and Computer Science, Associate Professor}} \\
+2019 — present & {\textbf{\href{https://spbu.ru}{Saint Petersburg State University}, Department of Mathematics and Computer Science, Associate Professor and head of the educational program in <<Data Science>>}} \\
 \ifdetailed
-& \vspace{-1em}
+& \vspace{-1.5em}
 \begin{itemize}
-	\item 2019 — head of the new educational program for bachelor's degree \href{https://maad.compscicenter.ru}{<<Data Science>>} (before 2021 <<Mathematics, algorithms and data analysis>>), created in cooperation with Yandex at the Mathematics and Computer Science department of St. Petersburg State University.
+	\item 2019 — head of the new educational program for bachelor's degree \href{https://maad.compscicenter.ru}{<<Data Science>>}, created in cooperation with Yandex at the Mathematics and Computer Science department of St. Petersburg State University.
 
-    The program combines fundamental mathematics education with the study of modern programming and machine learning. Students are offered research topics related to the developments of leading companies in the field of information technology. It immediately became popular among motivated applicants: in 2019, the competition was about 25 persons per position, almost all budget positions were filled with winners of Olympiads in mathematics and computer science, including the final stage of the All-Russian Olympiad for schoolchildren and the International Olympiad in Mathematics (IMO).
+  The program combines fundamental mathematics education with the study of modern programming and machine learning. Students are offered research topics related to the developments of leading companies in IT. It immediately became popular among motivated applicants: in 2019, the competition was about 25 persons per position, almost all budget positions were filled with winners of Olympiads in mathematics and computer science, including the final stage of the All-Russian Olympiad for schoolchildren and the International Olympiad in Mathematics (IMO).
+s
+  \item 2019-2020 — I created from scratch the \href{https://gsom.spbu.ru/all_news/event2021-02-04/}{International Scientific and Methodological Center of St. Petersburg State University} (Russian Ministry of Education grant)
 
-    \item 2019-2020 — created from scratch with a grant from the Ministry of Education of the Russian Federation \href{https://gsom.spbu.ru/all_news/event2021-02-04/}{International Scientific and Methodological Center of St. Petersburg State University}
+  In 2019-2020, I led the team of the Mathematics and Computer Science Department in a joint project with the Graduate School of Management of St. Petersburg State University of the International Scientific and Methodological Center of St. Petersburg State University (ISMC).
 
-    In 2019-2020, I led the team of the Mathematics and Computer Science Department in a joint project with the Graduate School of Management of St. Petersburg State University project of the International Scientific and Methodological Center of St. Petersburg State University (ISMC).
+  The ISMC concept was to create teaching materials and implement advanced training and retraining programs for teachers, with active involvement of the best Russian and foreign experts at all stages of work and, as a result, the formation, support and development of a professional community of university teachers.
 
-    The ISMC concept was to create teaching materials and implement advanced training and retraining programs for teachers, with active involvement of the best Russian and foreign experts at all stages of work and, as a result, the formation, support and development of a professional community of university teachers.
+  In total, 123 persons were involved in the implementation of the project, including 61 Candidates of Sciences or PhD (50\%) and 24 Doctors of Sciences (20\%). The project team not only successfully coped with the challenges that arose in the context of the COVID-19 pandemic, quickly restructuring and fulfilling the planned, but also turned them to the benefit of the project, carrying out intensive training of scientific and pedagogical workers and graduate students of Russian educational organizations from all over the country.
 
-    In total, 123 persons were involved in the implementation of the project, including 61 candidates of sciences or PhD (50\%) and 24 doctors of sciences (20\%). The project team not only successfully coped with the challenges that arose in the context of the COVID-19 pandemic, quickly restructuring and fulfilling the planned, but also turned them to the benefit of the project, carrying out intensive training of scientific and pedagogical workers and graduate students of Russian educational organizations from all over the country.
+  In 2020, within the framework of the ISMC, two advanced training programs, two internship programs, one professional retraining program and one school in mathematics and computer science were conducted for teachers at universities in the Russian Federation. In total, more than 1,500 persons from more than 50 cities and 60 universities in Russia were trained at the events of the ISMC. The events received a warm response from the community, and the graduates of the center are happy to use the acquired knowledge and methodological materials in their work.
 
-    In 2020, within the framework of the ISMC, two advanced training programs, two internship programs, one professional retraining program and one school in mathematics and computer science were conducted for teachers of universities in the Russian Federation. In total, more than 1,500 persons from more than 50 cities and 60 universities in Russia were trained at the events of the ISMC. The events received a warm response from the community, and the graduates of the center are happy to use the acquired knowledge and methodological materials in their work.
+  \item 2020-2021 — co-director and teacher of the traditional \href{https://sochisirius.ru/obuchenie/nauka/smena747/3603}{<<January Scientific School of Mathematics and Programming>> in Sirius}
 
-    \item 2020-2021 — co-director and teacher of the traditional \href{https://sochisirius.ru/obuchenie/nauka/smena747/3603}{<<January Scientific School of Mathematics and Programming>> in Sirius}
+  \item 2021 — all budget positions of the Data Science program are filled with winners of All-Russian Olympiads, including two winners of the International Olympiad in Mathematics
 
-    \item 2021 — all budget positions of the Data Science program are filled with winners of All-Russian Olympiads, including two winners of the International Olympiad in Mathematics
-
+  \item 2021-2022 — I created and read \href{https://github.com/spbu-math-cs/ml-course/}{one year machine learning course}
+\end{itemize}
+\vspace{-3em}
+\\
+\else
+& {In 2019 I launched an educational bachelor's program \href{https://maad.compscicenter.ru}{<<Data Science>>}, which immediately became popular among the best applicants in Russia. In 2020, I created from scratch  \href{https://gsom.spbu.ru/all_news/event2021-02-04/}{International Scientific and Methodological Center of St. Petersburg State University} (Russian Ministry of Education grant). I created and read \href{https://github.com/spbu-math-cs/ml-course/}{one year machine learning course}.} \\
+\fi
+\\
+2015 — 2018 & {\textbf{\href{https://yandex.ru/}{Yandex}, data scientist}} \\
+\ifdetailed
+& \vspace{-1.5em} \begin{itemize}
+	\item I implemented a daily calculation of the attribute-metrics (existence, name, address, working time...) of accuracy of the Yandex organizations database
+	\end{itemize}
+\\
+& \vspace{-1.5em} \begin{itemize}
+	\item I automated and optimized data update processes in call centers and in \href{https://toloka.yandex.ru}{Yandex.Toloka}. In particular I improved the effectiveness of updating by 20\%, using catboost to predict the likelihood of closing an organization
+	\item I increased the accuracy of the organizations database twice by 2\% and 3\%, highlighting the largest problems from the losses and correcting them. Firstly, fixed companies with inaccessible phones. Secondly, increased the accuracy of the time of work of organizations by their priority updating
 \end{itemize}
 \\
 \else
-& {In 2019, I launched an educational bachelor's program \href{https://maad.compscicenter.ru}{<<Data Science>>}, which immediately became popular among the best applicants in Russia. In 2020, I created from scratch with a grant from the Ministry of Education of the Russian Federation \href{https://gsom.spbu.ru/all_news/event2021-02-04/}{International Scientific and Methodological Center of St. Petersburg State University}. I read \href{https://github.com/spbu-math-cs/ml-course-2021/}{one year machine learning course} and teach traditional \href{https://sochisirius.ru/obuchenie/nauka/smena747/3603}{training sessions in Sirius}.}\\
-\\
+& {I increased the accuracy of the organizations database twice by 2\% and 3\% (the main goal of the team). I automated and optimized data update processes in call centers and in \href{https://toloka.yandex.ru}{Yandex.Toloka}. I worked in a group of six data scientists: development in Java, SQL, Python, a little bit of C++; catboost.}\\
 \fi
-\\
 2013 — present & {\textbf{\href{https://compscicenter.ru}{Yandex, CS center/Yandex Data School}, Academic Programs Manager}} \\
 \ifdetailed
 & \begin{itemize}
-	\item 2013 — launched a branch \href{https://yandexdataschool.ru}{Yandex Data School} in Novosibirsk. From 2016 to 2018 a total of 16 graduates
-	\item 2017 — in cooperation with JetBrains, expanded the Yandex Data School branch to \href{https://compscicenter.ru}{Computer science center}
+	\item 2013 — I launched a branch \href{https://yandexdataschool.ru}{Yandex Data School} in Novosibirsk
+	\item 2017 — in cooperation with JetBrains, I expanded the Yandex Data School branch to \href{https://compscicenter.ru}{Computer science center}
 	\item 2019 — co-leader and lecturer at \href{https://sochisirius.ru/obuchenie/graduates/smena240/1174}{<<Intensive project workshop for developers from Sirius, Yandex and the HSE CS>>}
+	\item 2019 — I organized open \href{https://habr.com/ru/company/JetBrains-education/blog/458042/}{Machine Learning training sessions} for Kaggle competition participants
 \end{itemize}
 \\
 \else
-& {In 2013 launched a branch \href{https://yandexdataschool.ru}{Yandex Data School} in Novosibirsk. From 2016 to 2018 a total of 16 graduates. In 2017 in cooperation with JetBrains, expanded the Yandex Data School branch to \href{https://compscicenter.ru}{Computer science center}. In 2019 I organized \href{https://sochisirius.ru/obuchenie/graduates/smena240/1174}{<<Intensive project workshop for developers from Sirius, Yandex and the HSE department of computer science>>}} \\
+& {In 2013 I launched a branch \href{https://yandexdataschool.ru}{Yandex Data School} in Novosibirsk. In 2017 in cooperation with JetBrains, I expanded the Yandex Data School branch to \href{https://compscicenter.ru}{Computer science center}. In 2019 I organized open \href{https://habr.com/ru/company/JetBrains-education/blog/458042/}{Machine Learning training sessions} for Kaggle competition participants.} \\
 \fi
 \\
-2015 — 2018 & {\textbf{\href{https://yandex.ru/}{Yandex}, analyst}} \\
-\ifdetailed
-& \begin{itemize}
-	\item implemented a daily calculation of the attribute-metrics (publicity, name, address, working time...) of accuracy of the Yandex organizations database
-	\item automated and optimized data update processes in call centers and in \href{https://toloka.yandex.ru}{Yandex.Toloka}. In particular improved the effectiveness of updating by 20\%, using catboost to predict the likelihood of closing an organization
-	\item two times increased the accuracy of the organizations database by 2\% and 3\%, highlighting the largest problems from the losses and correcting them. Firstly, fixed companies with inaccessible phones. Secondly, increased the accuracy of the time of work of organizations by their priority updating
-\end{itemize}
-\\
-\else
-& {Two times increased the accuracy of the organizations database by 2\% and 3\%. Automated and optimized data update processes in call centers and in \href{https://toloka.yandex.ru}{Yandex.Toloka}. Worked in a group of six analysts, development in Java, SQL, Python, a little bit of C++; catboost.} \\
-\\
-\fi
-
 2009 — 2015 & {\textbf{\href{http://www.ict.nsc.ru}{Institute of Computational Technologies SB RAS}, graduate student, researcher}}\\
 \ifdetailed
 & \vspace{-1em}
 \begin{itemize}
-	\item generalized to non-stationary geometry the method of solving the three-dimensional Reynolds equations of motion of an incompressible fluid
-	\item accelerated calculations by 16 times, parallelizing the algorithm across blocks of the computational domain using MPI for processes with distributed memory (improvement of the Fortran software package available in the laboratory, $\sim$ 30 thousand lines of code)
-	\item accelerated another 7 times, parallelizing the algorithm in one block using OpenMP-threads with shared memory
-	\item published 19 scientific papers (4 articles, 13 theses, 2 patents), eventually defending a PhD thesis <<New numerical models of hydrodynamics of turbomachines >> (in Russian)
+	\item I generalized to non-stationary geometry the method of solving the three-dimensional Reynolds equations of motion of an incompressible fluid
+	\item I accelerated calculations by 16 times, parallelizing the algorithm across blocks of the computational domain using MPI for processes with distributed memory (improvement of the Fortran software package available in the laboratory, $\sim$ 30 thousand lines of code)
+	\item I accelerated another 7 times, parallelizing the algorithm in one block using OpenMP-threads with shared memory
+	\item I published 19 scientific papers (4 articles, 13 theses, 2 patents), eventually defending a PhD thesis \href{https://github.com/avalur/dissertation/blob/master/to_print/autoref_Avdyushenko.pdf}{<<New numerical models of hydrodynamics of turbomachines>>} (in Russian)
 \end{itemize}
 \\
 \else
-& {Developed a new numerical model that takes into account the change in the geometry of the flow path over time. Accelerated calculations by the Fortran language software package available in the laboratory by 16 times (MPI per block), and another 7 times (OpenMP flows inside the block). I made \href{https://github.com/avalur/dissertation/blob/master/to_print/autoref_Avdyushenko.pdf}{PhD thesis (in russian)}.} \\
-\\
+& {I developed a new numerical model that takes into account the change in the geometry of the flow path over time. I accelerated calculations by the Fortran language software package available in the laboratory by 16 times (MPI per block), and another 7 times (OpenMP flows inside the block). I made \href{https://github.com/avalur/dissertation/blob/master/to_print/autoref_Avdyushenko.pdf}{PhD thesis (in russian)}.} \\
 \fi
 
 \ifdetailed
 2008 — 2014 & {\href{http://sesc.nsu.ru}{Specialized Educational and Scientific Center NSU}, math teacher}\\
 2006 — 2017 & {organizer and member of the Jury of Mathematical Olympiads: All-Russian, All-Siberian, Tournament of cities}\\
-2010 — 2013 & {\href{https://sites.google.com/site/sovenoknsk/}{math club <<Sovenok>>}, organizer and teacher}\\
+2010 — 2013 & {\href{https://www.sovenok.academy/}{math club <<Sovenok>>}, organizer and teacher}\\
+\\
 \fi
 
 \end{longtable}
 
-\ifdetailed
+\vspace{-1em}
 \noindent {\textbf{Skills}}
 \begin{longtable} {p{0.5\textwidth}p{0.5\textwidth}}
 \vspace{-2em}
@@ -134,26 +137,26 @@
 \end{itemize}
 \\
 \end{longtable}
-\newpage
-\fi
 
+\vspace{-3em}
 \noindent {\textbf{Education}
 \begin{longtable} {cp{0.35\textwidth}p{0.38\textwidth}l}
-2013 — 2016	& \href{https://yandexdataschool.ru}{Yandex Data School} & machine learning, programming & graduate \vspace{0.5em}\\
-2009 — 2014	& \href{http://www.ict.nsc.ru/ru/education/postgraduate}{Graduate School of ICT SB RAS} & math modeling, numerical methods & PhD \vspace{0.5em}\\
-2003 — 2009	& \href{https://www.nsu.ru/n/mathematics-mechanics-department}{NSU, Department of Mechanics and Mathematics} & math & master \vspace{0.5em}\\
+2013 — 2016	& \href{https://yandexdataschool.ru}{Yandex Data School} & machine learning, programming & graduate \vspace{0.25em}\\
+2009 — 2014	& \href{http://www.ict.nsc.ru/ru/education/postgraduate}{Graduate School of ICT SB RAS} & math modeling, numerical methods & PhD \vspace{0.25em}\\
+2003 — 2009	& \href{https://www.nsu.ru/n/mathematics-mechanics-department}{NSU, Department of Mechanics and Mathematics} & math & master \vspace{0.25em}\\
 \end{longtable}
 
-\ifdetailed
+\vspace{-1.5em}
 \noindent {\textbf{Online courses}
 \begin{longtable} {cp{0.35\textwidth}p{0.38\textwidth}l}
 2017 & Coursera, University of Washington & Programming Languages, parts A, B, C & 	certificate \vspace{0.5em}\\
 2019 & Coursera, HSE University & How to Win a Data Science Competition: Learn from Top Kagglers & certificate \vspace{0.5em}\\
 \end{longtable}
-\fi
 
+\vspace{-2em}
 \noindent{\textbf{Out of work}}
 
-I like to spend time with my wife and daughter, I try to do sports regularly (running, climbing) whenever possible and I have the \href{https://www.instagram.com/ovalur/}{Insragram}
+I like to spend time with my wife and daughter, I try to do sports regularly (swimming, climbing) whenever possible and I have the \href{https://www.instagram.com/ovalur/}{Insragram}
 
-\end{document}             % End of document.
+\end{document}
+% End of document.
